--- a/index.html
+++ b/index.html
@@ -14,7 +14,16 @@
 		body {
 			overflow: hidden;
 			margin: 0;
-			padding: 0;
+			background-color: rgb(0, 0, 0);
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			height: 100vh;
+		}
+
+		canvas {
+			max-width: 100%;
+			max-height: 100%;
 		}
 
 		@font-face {
