More font weights, Shadows

--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
 			font-family: 'Jost';
 			src: url('Jost/static/Jost-Regular.ttf') format('truetype');
 		}
+		@font-face {
+			font-family: 'Jost-Bold';
+			src: url('Jost/static/Jost-Bold.ttf') format('truetype');
+		}
+		@font-face {
+			font-family: 'Jost-Thin';
+			src: url('Jost/static/Jost-Thin.ttf') format('truetype');
+		}
 
 		</style>
 	</head>
