--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<script src="p5-1.7.0.min.js"></script>
 		<script src="app.js"></script>
 		<script src="graphics.js"></script>
+		<script src="audio.js"></script>
 		<script src="song.js"></script>
 		<style>
 		body {
