--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		}
 		@font-face {
 			font-family: 'Jost-Bold';
-			src: url('Jost/static/Jost-Bold.ttf') format('truetype');
+			src: url('Jost/static/Jost-Medium.ttf') format('truetype');
 		}
 		@font-face {
 			font-family: 'Jost-Thin';
