Use local tone.js

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 		<meta charset="utf-8">
 		<title>Demo by Two Bad</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<!-- <script src="tone-14.7.77.js"></script> -->
-		<script src="https://unpkg.com/tone"></script>
+		<script src="tone-14.7.77/Tone.js"></script>
+		<!-- <script src="https://unpkg.com/tone"></script> -->
 		<script src="p5-1.7.0.min.js"></script>
 		<script src="app.js"></script>
 		<script src="graphics.js"></script>
